[gd_scene load_steps=12 format=3 uid="uid://dxrd42my48q37"]

[ext_resource type="Theme" uid="uid://d20giirqakg3w" path="res://resouces/themes/panel_gameplay.theme" id="1_llay1"]
[ext_resource type="Texture2D" uid="uid://c52xs35e2wn04" path="res://assets/img/panels/Panel_Containers.svg" id="2_c7gc2"]
[ext_resource type="Script" path="res://scripts/interface/gameplay/passive_descrition.gd" id="2_lef3e"]
[ext_resource type="FontFile" uid="uid://cdsd7fxfdwayp" path="res://assets/fonts/GiantRobotArmy-Medium.ttf" id="3_5fhuu"]
[ext_resource type="StyleBox" uid="uid://bhul54i7fb6xo" path="res://resouces/stylebox/label_bg_panel.stylebox" id="4_ufuw3"]
[ext_resource type="Script" path="res://scripts/interface/gameplay/icon_passive_draw.gd" id="5_2okxj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w6355"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kuyro"]
atlas = ExtResource("2_c7gc2")
region = Rect2(0, 1001, 68, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5sgk"]
atlas = ExtResource("2_c7gc2")
region = Rect2(0, 926, 68, 68)

[sub_resource type="LabelSettings" id="LabelSettings_3ue5n"]
font = ExtResource("3_5fhuu")
font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6my5x"]
content_margin_top = 8.0

[node name="passive_descrition" type="PanelContainer"]
offset_left = 754.0
offset_top = 431.0
offset_right = 900.0
offset_bottom = 573.0
mouse_filter = 2
theme = ExtResource("1_llay1")
theme_override_styles/panel = SubResource("StyleBoxEmpty_w6355")
script = ExtResource("2_lef3e")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_c7gc2")
region_rect = Rect2(276, 701, 161, 108)
patch_margin_left = 40
patch_margin_top = 57
patch_margin_right = 106
patch_margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 17
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 17

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="debuff" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = SubResource("AtlasTexture_kuyro")
expand_mode = 1
script = ExtResource("5_2okxj")

[node name="buff" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = SubResource("AtlasTexture_g5sgk")
expand_mode = 1
script = ExtResource("5_2okxj")

[node name="name" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_3ue5n")
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="info1" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_6my5x")
theme_override_styles/normal = ExtResource("4_ufuw3")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="info2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_6my5x")
theme_override_styles/normal = ExtResource("4_ufuw3")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="info3" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_6my5x")
theme_override_styles/normal = ExtResource("4_ufuw3")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="descrition" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/normal = ExtResource("4_ufuw3")
bbcode_enabled = true
fit_content = true
scroll_active = false
